[gd_scene load_steps=18 format=3 uid="uid://bc8mfluu54yop"]

[ext_resource type="Script" uid="uid://c2fnikb5b3xc" path="res://characters/scripts/player.gd" id="1_4flbx"]
[ext_resource type="PackedScene" uid="uid://cl6a5g7rvrnq3" path="res://components/hurtbox.tscn" id="2_onrkg"]
[ext_resource type="PackedScene" uid="uid://cwiq6mvq7o14b" path="res://components/hitbox.tscn" id="3_hqtel"]
[ext_resource type="Script" uid="uid://7fpyy3rnsj50" path="res://characters/scripts/player_state.gd" id="5_sweqy"]
[ext_resource type="Script" uid="uid://cdc5i0jem7u40" path="res://characters/scripts/player_ui.gd" id="6_2hs0m"]
[ext_resource type="Script" uid="uid://0jjy4mfeabtw" path="res://components/scripts/PlayerStats.gd" id="7_eho78"]
[ext_resource type="Script" uid="uid://crr0ejn5u5mnk" path="res://items/scripts/inventory.gd" id="7_j31ep"]
[ext_resource type="Script" uid="uid://cbekpf2ko2b1u" path="res://items/scripts/equipment.gd" id="7_q605b"]
[ext_resource type="Script" uid="uid://dbv0kjw2eq5vg" path="res://items/scripts/inventory_ui.gd" id="8_n8jd0"]
[ext_resource type="PackedScene" uid="uid://dvtv06ack3mol" path="res://items/scripts/item_slot.tscn" id="10_q605b"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_onrkg"]
radius = 0.610764

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4flbx"]

[sub_resource type="BoxMesh" id="BoxMesh_4flbx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h1q25"]
albedo_color = Color(0.485703, 0.485704, 0.485703, 1)
metallic = 0.41
roughness = 0.15

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_i3pqv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sweqy"]
radius = 0.879101
height = 2.28981

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q605b"]
bg_color = Color(0.0605303, 0.0605303, 0.0605303, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA_CONTROLLER")]
collision_layer = 2
collision_mask = 265
floor_constant_speed = true
script = ExtResource("1_4flbx")
speed = 5
CAMERA_CONTROLLER = NodePath("Camera3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_onrkg")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.516809, -0.537928)
current = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_4flbx")

[node name="googles" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.53, 0)

[node name="mesh" type="MeshInstance3D" parent="googles"]
transform = Transform3D(0.488765, 0, 0, 0, 0.161087, 0, 0, 0, 0.212507, 0, -0.000251949, -0.452543)
mesh = SubResource("BoxMesh_4flbx")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_h1q25")

[node name="Hurtbox" parent="." instance=ExtResource("2_onrkg")]
collision_layer = 128

[node name="HurtboxShape" type="CollisionShape3D" parent="Hurtbox"]
shape = SubResource("CapsuleShape3D_i3pqv")

[node name="Hitbox" parent="." instance=ExtResource("3_hqtel")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.26225)
collision_layer = 64

[node name="HitboxShape" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.233257)
shape = SubResource("CapsuleShape3D_sweqy")
disabled = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_sweqy")

[node name="Inventory" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("7_j31ep")

[node name="Equipment" type="Node" parent="."]
script = ExtResource("7_q605b")

[node name="Stats" type="Node" parent="."]
script = ExtResource("7_eho78")

[node name="InteractionRay" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -1)
collision_mask = 260

[node name="UI" type="Control" parent="."]
light_mask = 0
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("6_2hs0m")
metadata/_edit_lock_ = true

[node name="cursor" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -2.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="target_name" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = 3.0
offset_right = 21.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="InventoryUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("8_n8jd0")
item_slot = ExtResource("10_q605b")

[node name="InventoryPanel" type="PanelContainer" parent="InventoryUI"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -48.5
offset_bottom = 48.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_q605b")

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryUI/InventoryPanel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryUI/InventoryPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="InventoryUI/InventoryPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="InventoryUI/InventoryPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="InventoryGrid" type="GridContainer" parent="InventoryUI/InventoryPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[connection signal="pressed" from="InventoryUI/InventoryPanel/VBoxContainer/HBoxContainer/CloseButton" to="InventoryUI" method="_on_close_button_pressed"]
